--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
 
      <header class="header">
-         <a href="#" class="logo">Portfolio</a>
+         <a href="index.html" class="logo">Portfolio</a>
 
          <i class="bx bx-menu" id="menu-icon"></i>
 
          <nav class="navbar">
-             <a href="#home" class="active">Home</a>
+             <a href="index.html" class="active">Home</a>
              <a href="#service">Services</a>
              <a href="#portfolio">Portfolio</a>
-             <a href="#contact">Contact</a>
+             <a href="contact.html">Contact</a>
          </nav>
      </header>
 
@@ -28,8 +28,8 @@
          <div class="home-content">
              <h3>Hi, It's Me</h3>
              <h1>Bowei Xu</h1>
-             <h3>And I'm a <span>Software Engineer</span></h3>
-             <p>Bowei Xu has just graduated from University of Southern California with a Master of Computer Science degree. He is looking for a software developer/engineer full time opportunities. He has strong computer skills and can fit in fast-pace work environment. Currently, Bowei is working as a Software Engineer at Chuwa America. Bowei had two Software Engineer Intern experiences at Social Payme and DigiFinex. He learned some startup experience and blockchain knowledge. Bowei possesses cross-cultural understanding, is fluent in Mandarin and advanced in English. He loves traveling, playing Go, hiking and so on. Bowei is a member of American Go Association and a second-level referee of Chinese Go. Bowei won the 1st place in the 2023 SLC Go Tournament.</p>
+             <h3>And I'm a <span>Web Full Stack Developer</span></h3>
+             <p>Bowei Xu has just graduated from University of Southern California with a Master of Computer Science degree. He is looking for a software developer/engineer full time opportunities. He has strong computer skills and can fit in fast-pace work environment. Currently, Bowei is working as a Web Full Stack Developer at Fuel Cell Store. Bowei had three Software Engineer Intern experiences at Laplace Investment Management, Social Payme, and DigiFinex. Bowei possesses cross-cultural understanding, is fluent in Mandarin and advanced in English. He loves traveling, playing Go, hiking and so on. Bowei is a member of American Go Association and a second-level referee of Chinese Go. Bowei won the 1st place in the 2023 SLC Go Tournament, College Station Go Tournament, and Houston Go Tournament.</p>
              <div class="social-media">
                  <a href="https://www.linkedin.com/in/bowei-xu-132a3b1b9/"><i class="bx bxl-linkedin"></i></a>
              </div>
