--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
          <nav class="navbar">
              <a href="index.html" class="active">Home</a>
-             <a href="#service">Services</a>
-             <a href="#portfolio">Portfolio</a>
+             <a href="#">Experiences</a>
+             <a href="#">Portfolio</a>
              <a href="contact.html">Contact</a>
          </nav>
      </header>
@@ -28,11 +28,8 @@
          <div class="home-content">
              <h3>Hi, It's Me</h3>
              <h1>Bowei Xu</h1>
-             <h3>And I'm a <span>Web Full Stack Developer</span></h3>
+             <h3>And I'm a <span>Software Engineer</span></h3>
              <p>Bowei Xu has just graduated from University of Southern California with a Master of Computer Science degree. He is looking for a software developer/engineer full time opportunities. He has strong computer skills and can fit in fast-pace work environment. Currently, Bowei is working as a Web Full Stack Developer at Fuel Cell Store. Bowei had three Software Engineer Intern experiences at Laplace Investment Management, Social Payme, and DigiFinex. Bowei possesses cross-cultural understanding, is fluent in Mandarin and advanced in English. He loves traveling, playing Go, hiking and so on. Bowei is a member of American Go Association and a second-level referee of Chinese Go. Bowei won the 1st place in the 2023 SLC Go Tournament, College Station Go Tournament, and Houston Go Tournament.</p>
-             <div class="social-media">
-                 <a href="https://www.linkedin.com/in/bowei-xu-132a3b1b9/"><i class="bx bxl-linkedin"></i></a>
-             </div>
              <a href="Bowei_Xu_Resume.pdf" download="Bowei_Xu.pdf" class="btn">Download CV</a>
          </div>
      </section>
