--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,9 @@
     <div class="contact-content">
         <h2>Contact Information</h2>
         <p>If you would like to get in touch with me, you can reach out through the following channels:</p>
-        <ul>
-            <li>Email: <a href="mailto:bowei_xu@outlook.com">bowei_xu@outlook.com</a></li>
-            <li>GitHub: <a href="https://github.com/antoinexu" target="_blank">https://github.com/antoinexu</a></li>
-            <li>Linkedin: <a href="https://www.linkedin.com/in/bowei-xu-132a3b1b9/">https://www.linkedin.com/in/bowei-xu-132a3b1b9/</a></li>
-        </ul>
+        <a href="mailto:bowei_xu@outlook.com" class="social-icon"><i class='bx bx-envelope'></i></a>
+        <a href="https://github.com/antoinexu" target="_blank" class="social-icon"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/bowei-xu-132a3b1b9/" class="social-icon"><i class='bx bxl-linkedin'></i></a>
     </div>
 </section>
 
