--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,10 @@
 
     <nav class="navbar">
         <a href="index.html" class="active">Home</a>
-        <a href="#service">Services</a>
+        <a href="#service">Experiences</a>
         <a href="#portfolio">Portfolio</a>
         <a href="contact.html">Contact</a>
+        <a href="skill.html">Skills</a>
     </nav>
 </header>
 
