--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
              <a href="#">Experiences</a>
              <a href="#">Portfolio</a>
              <a href="contact.html">Contact</a>
+             <a href="skill.html">Skills</a>
          </nav>
      </header>
 
@@ -34,6 +35,5 @@
          </div>
      </section>
 
-     <script src="script.js"></script>
 </body>
 </html>
