--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,9 @@
     <i class="bx bx-menu" id="menu-icon"></i>
 
     <nav class="navbar">
-        <a href="index.html" class="active">Home</a>
-        <a href="#service">Experiences</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="experience.html">Experiences</a>
+        <a href="contact.html" class="active">Contact</a>
         <a href="skill.html">Skills</a>
     </nav>
 </header>
