--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
          <nav class="navbar">
              <a href="index.html" class="active">Home</a>
-             <a href="#">Experiences</a>
-             <a href="#">Portfolio</a>
+             <a href="experience.html">Experiences</a>
              <a href="contact.html">Contact</a>
              <a href="skill.html">Skills</a>
          </nav>
