--- a/skill.html
+++ b/skill.html
@@ -16,11 +16,10 @@
     <i class="bx bx-menu" id="menu-icon"></i>
 
     <nav class="navbar">
-        <a href="index.html" class="active">Home</a>
-        <a href="#service">Experiences</a>
-        <a href="#portfolio">Portfolio</a>
+        <a href="index.html">Home</a>
+        <a href="experience.html">Experiences</a>
         <a href="contact.html">Contact</a>
-        <a href="skill.html">Skills</a>
+        <a href="skill.html" class="active">Skills</a>
     </nav>
 </header>
 
@@ -51,6 +50,10 @@
             <a href="#" class="skill-icon"><i class='bx bxl-react'></i><span>React.js</span></a>
             <a href="#" class="skill-icon"><i class='bx bxl-mongodb'></i><span>MongoDB</span></a>
             <a href="#" class="skill-icon"><i class='bx bxl-figma'></i><span>Figma</span></a>
+            <a href="https://www.usgo.org/content.aspx?page_id=22&club_id=454497&module_id=550340" class="skill-icon">
+                <i class='bx bx-brain'></i>
+                <span>Go - AGA ID: 30045</span>
+            </a>
         </div>
     </div>
 </section>
