--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
         <a href="experience.html">Experiences</a>
         <a href="contact.html" class="active">Contact</a>
         <a href="skill.html">Skills</a>
+        <a href="project.html">Projects</a>
     </nav>
 
     <select id="language-selector" class="language-selector">
@@ -52,6 +53,7 @@
                     document.querySelector('.navbar a[href="experience.html"]').textContent = data[lang].experiences;
                     document.querySelector('.navbar a[href="contact.html"]').textContent = data[lang].contact;
                     document.querySelector('.navbar a[href="skill.html"]').textContent = data[lang].skills;
+                    document.querySelector('.navbar a[href="project.html"]').textContent = data[lang].projects;
                     document.querySelector('.contact-content h2').textContent = data[lang].contact_info;
                     document.querySelector('.contact-content p').textContent = data[lang].contact_blurb;
                 });
