--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
              <a href="experience.html">Experiences</a>
              <a href="contact.html">Contact</a>
              <a href="skill.html">Skills</a>
+             <a href="project.html">Projects</a>
          </nav>
 
          <select id="language-selector" class="language-selector">
@@ -32,7 +33,7 @@
              <h3>Hi, It's Me</h3>
              <h1>Bowei Xu</h1>
              <h3>And I'm a <span>Software Engineer</span></h3>
-             <p>Bowei Xu has just graduated from University of Southern California with a Master of Computer Science degree. He is looking for a software developer/engineer full time opportunities. He has strong computer skills and can fit in fast-pace work environment. Currently, Bowei is working as a Web Full Stack Developer at Fuel Cell Store. Bowei had three Software Engineer Intern experiences at Laplace Investment Management, Social Payme, and DigiFinex. Bowei possesses cross-cultural understanding, is fluent in Mandarin and advanced in English. He loves traveling, playing Go, hiking and so on. Bowei is a member of American Go Association and a second-level referee of Chinese Go. Bowei has achieved remarkable success, securing first place in the 2023 SLC Go Tournament, College Station Go Tournament, Houston Go Tournament and sixth place in the 2024 Chicago Open.</p>
+             <p>Bowei Xu graduated from with a Master of Computer Science degree. He is looking for a software developer/engineer full time opportunities. He has strong computer skills and can fit in fast-pace work environment. Currently, Bowei is working as a Web Full Stack Developer at Fuel Cell Store. Bowei had three Software Engineer Intern experiences at Laplace Investment Management, Social Payme, and DigiFinex. Bowei possesses cross-cultural understanding, is fluent in Mandarin and advanced in English. He loves traveling, playing Go, hiking and so on. Bowei is a member of American Go Association and a second-level referee of Chinese Go. Bowei has achieved remarkable success, securing first place in the 2023 SLC Go Tournament, College Station Go Tournament, Houston Go Tournament and sixth place in the 2024 Chicago Open.</p>
              <a href="Bowei_Xu_Resume.pdf" download="Bowei_Xu.pdf" class="btn">Download CV</a>
          </div>
      </section>
@@ -50,6 +51,7 @@
                     document.querySelector('.navbar a[href="experience.html"]').textContent = data[lang].experiences;
                     document.querySelector('.navbar a[href="contact.html"]').textContent = data[lang].contact;
                     document.querySelector('.navbar a[href="skill.html"]').textContent = data[lang].skills;
+                    document.querySelector('.navbar a[href="project.html"]').textContent = data[lang].projects;
                     document.querySelector('.home-content h3').textContent = data[lang].greeting;
                     document.querySelector('.home-content h1').textContent = data[lang].name;
                     document.querySelector('.home-content h3:nth-of-type(2)').textContent = data[lang].title;
