--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="experience-item">
-                <a href="https://www.laplaceinvestment.com/" target="_blank">
+                <a target="_blank">
                     <img src="pics/laplace_investment_management_inc_logo.jpg" alt="Laplace Investment Management Logo"
                          class="company-logo">
                 </a>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="experience-item">
-                <a href="https://www.socialpayme.com/" target="_blank">
+                <a target="_blank">
                     <img src="pics/social_payme_logo.jpg" alt="Social Payme Logo" class="company-logo">
                 </a>
                 <h3>Backend Developer Intern - Social Payme</h3>
